--- a/checkout.html
+++ b/checkout.html
@@ -375,9 +375,7 @@
             <div class="footer-info">
               <h3>Gp<span>.</span></h3>
               <p>
-                114774
-                  79TH PL N
-                  OSSEO, MN 55311<br><br>
+                257 MISTY GROVE DR SE, LOGANVILLE, GA, 3052, USA<br><br>
                 <strong>Phone:</strong> +1 949 471 0472<br>
                 <strong>Email:</strong> customersupport@Energy promotionsolutionsllc.com<br>
               </p>
