--- a/index.html
+++ b/index.html
@@ -656,9 +656,7 @@
             <div class="footer-info">
               <h3>Energy promotions & services <span>LLC</span></h3>
               <p>
-                114774
-                  79TH PL N
-                  OSSEO, MN 55311<br><br>
+                257 MISTY GROVE DR SE, LOGANVILLE, GA, 3052, USA<br><br>
                 <strong>Phone:</strong> +1 (954) 281-8490<br>
                 <strong>Email:</strong> info@energypromotions.us<br>
               </p>
@@ -801,7 +799,4 @@ saveCartToLocalStorage();
   <script src="assets/js/main.js"></script>
 
 </body>
-
-
-<!-- Mirrored from Energy promotionsolutionsllc.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Jan 2024 08:35:23 GMT -->
 </html>
