--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>IT Consultancy Company</h1>
-          <h2>
-            
-            We believe Energy promotion is the best opportunity for IT and businesses to create a competitive advantage by connecting them at emotional level.
-          </h2>
+          <h1>Elevate Your Tech Experience</h1>
+          <h2>Unleash Savings on the Latest Electronics – Promotions that Spark Innovation</h2>
         </div>
       </div>
         
